@startuml DomainLayerEntities
skinparam classAttributeIconSize 0
skinparam direction top to bottom
skinparam class {
  BackgroundColor #FFF9E6
  BorderColor #333333
  ArrowColor #333333
}

title Domain Layer - Core Entities

class User {
  + Username: string
  + Password: string
  + PlayerData: Player?
}

class Player {
  + Name: string
  + CurrentPhase: int = 1
  + CurrentLocation: string = "Pallet Town"
  + Badges: List<string>
  + PokemonTeam: List<Pokemon>
  + Inventory: Dictionary<int, Dictionary<string, List<Item>>>
  + CurrentPokemon: Pokemon
  + IsChampion: bool = false
  + PvPWins: int = 0
  + PvPLosses: int = 0
  + AddBadge(badgeName: string)
  + AddItem(item: Item)
  + RemoveItem(item: Item)
}

class Pokemon <<Pokemon.Shared>> {
  + Specie: PokemonSpecies
  + Level: int
  + TotalExp: int
  + CurrentHP: int
  + MaxHP: int
  + CurrentExp: int
  + MaxExpForNextLevel: int
  + Moves: List<PokemonMove>
  + IsFainted: bool
  + Status: PokemonStatus
  + TakeDamage(damage: int)
  + Heal(hpAmount: int)
  + GainExperience(amount: int)
  + LevelUp()
  + CanEvolve(): bool
  + Evolve(evolvedTemplate: Pokemon)
  + LearnNewMovesAtLevel(level: int): List<string>
  + UpdateMoveSet(newMoves: List<PokemonMove>)
  + ReplaceMove(index: int, newMove: PokemonMove)
}

class PokemonSpecies <<Pokemon.Shared>> {
  + Id: int
  + Name: string
  + Types: List<ElementType>
  + BaseStats: Stats
  + MoveSet: List<PokemonMove>
  + CatchRate: int
  + BaseExp: int
  + EvolutionId: int?
  + EvolutionLevel: int?
}

class PokemonMove <<Pokemon.Shared>> {
  + Name: string
  + Type: ElementType
  + Power: int
  + PP: int
  + MoveType: MoveType
  + LevelLearned: int
}

class Stats <<Pokemon.Shared>> {
  + HP: int
  + Attack: int
  + Defense: int
  + SpAttack: int
  + SpDefense: int
  + Speed: int
}

enum ElementType <<Pokemon.Shared>> {
  None
  Fire
  Water
  Grass
  Electric
  Psychic
  Ice
  Dragon
  Dark
  Fairy
  Normal
  Fighting
  Flying
  Poison
  Ground
  Rock
  Bug
  Ghost
  Steel
}

enum MoveType <<Pokemon.Shared>> {
  Physical
  Special
  Status
}

enum PokemonStatus <<Pokemon.Shared>> {
  None
  Asleep
  Frozen
  Paralyzed
  Burned
  Poisoned
}

enum ItemCategory {
  Healing
  Capture
  General
  Utility
}

abstract class Item {
  + Id: int
  + Name: string
  + Description: string
  + Category: ItemCategory
  + Price: int
}

class HealingItem {
  + HealAmount: int
}

class CaptureItem {
  + CatchRateMultiplier: double
}

class GeneralItem {
  + SoldRate: double
}

class Inventory {
  + Items: Dictionary<Item, int>
  + AddItem(item: Item, amount: int)
  + RemoveItem(item: Item): bool
}

class GameSession {
  + CurrentUser: User?
  + Player: Player? <<computed>>
  + CurrentLocation: LocationData
  + HasPlayedNarrative: bool
  + CurrentEnemyTeam: List<Pokemon>
  + CurrentEnemyTeamIndex: int
  + IsTrainerBattle: bool
  + CurrentEnemyPokemon: Pokemon? <<computed>>
  + SetupBattle(enemies: List<Pokemon>, isTrainer: bool)
  + HasMoreEnemies(): bool
  + MoveToNextEnemy()
  + ClearBattle()
}

abstract class Trainer {
  + Name: string
  + Team: List<Pokemon>
  + IsDefeated: bool
}

class NPC {
  + Role: NPCRole
  + ChallengeQuote: string
  + DefeatQuote: string
  + RequiredBadge: int
}

enum NPCRole {
  GymLeader
  EliteFour
  Champion
  Rival
  Other
}

class CatchFormula <<static>> {
  + {static} AttemptCatch(target: Pokemon, ball: CaptureItem): CatchAttemptResult
}

class CatchAttemptResult <<record>> {
  + IsCaught: bool
  + Shakes: int
}

' ===== Story Data Models =====
class GameData {
  + Phases: List<PhaseData>
}

class PhaseData {
  + PhaseId: int
  + Name: string
  + Locations: List<LocationData>
}

class LocationData {
  + Id: int
  + Name: string
  + Narratives: List<string>
  + NPCs: List<NpcData>
  + WildPokemons: List<string>
  + MinLevel: int
  + MaxLevel: int
}

class NpcData {
  + Name: string
  + Role: string
  + Dialogue: List<string>
  + Action: string
  + RequiredBadge: int
  + PokemonTeam: List<NpcPokemon>
  + ActionParam: string
}

class NpcPokemon {
  + Name: string
  + Level: int
  + Moves: List<PokemonMove>
}

' ===== Pokemon.Shared Rules =====
class DamageCalculator <<static>> <<Pokemon.Shared>> {
  + {static} Calculate(attacker: Pokemon, defender: Pokemon, move: PokemonMove): DamageResult
}

class DamageResult <<record>> <<Pokemon.Shared>> {
  + Damage: int
  + IsCritical: bool
  + TypeMultiplier: float
  + IsImmune: bool <<computed>>
  + IsSuperEffective: bool <<computed>>
  + IsNotVeryEffective: bool <<computed>>
}

class ExpCalculator <<static>> <<Pokemon.Shared>> {
  + {static} CalculateExpGain(isTrainer: bool, baseExp: int, level: int, participants: int): int
  + {static} CanLevelUp(currentLevel: int, totalExp: int): bool
  + {static} GetRequiredExpForLevel(level: int): int
}

class TypeChart <<static>> <<Pokemon.Shared>> {
  + {static} GetEffectivenessMultiplier(attackType: ElementType, defenseType: ElementType): float
}

' Relationships
User "1" --> "0..1" Player : has PlayerData
Player "1" --> "*" Pokemon : owns team
Player --> Item : has inventory

Pokemon --> PokemonSpecies : base species
Pokemon --> PokemonMove : learns
Pokemon --> PokemonStatus : has status

PokemonSpecies --> Stats : base stats
PokemonSpecies --> PokemonMove : available moves
PokemonSpecies --> ElementType : has type
PokemonMove --> MoveType : has move type

Item <|-- HealingItem
Item <|-- CaptureItem
Item <|-- GeneralItem
Item --> ItemCategory : categorized by

Inventory --> Item : contains

Trainer <|-- NPC
NPC --> NPCRole : has role

GameSession --> User : current user
GameSession --> Pokemon : enemy pokemon
GameSession --> LocationData : current location

GameData --> PhaseData : contains
PhaseData --> LocationData : contains
LocationData --> NpcData : has npcs
NpcData --> NpcPokemon : has team

DamageCalculator --> DamageResult : returns
DamageCalculator --> TypeChart : uses

@enduml
